fixed installation and modified examples page

--- a/examples.html
+++ b/examples.html
@@ -27,8 +27,8 @@
   <main class="content">
     <section class="section">
       <h2>Examples</h2>
-      <p>Explore full configuration examples in the KubeHCL documentation:</p>
-      <a href="#" class="btn">View Docs</a>
+      <p>Examples will be added later</p>
+      <!-- <a href="#" class="btn">View Docs</a> -->
     </section>
 
     <footer>
