--- a/installation.html
+++ b/installation.html
@@ -57,10 +57,10 @@ https://github.com/yanir75/kubehcl/releases
 # 1. Download the matching "kubehcl_&lt;version&gt;_linux_&lt;processor&gt;.tar.gz" (amd,arm etc) asset
 # 2. tar xvzf kubehcl_&lt;version&gt;_linux_&lt;processor&gt;.tar.gz
 # 3. Make it executable
-chmod +x kubehcl_&lt;version&gt;_linux_&lt;processor&gt;
+chmod +x kubehcl_&lt;version&gt;_linux_&lt;processor&gt;/kubehcl
 
 # 4. Move it into your PATH for global use
-sudo mv kubehcl_&lt;version&gt;_linux_&lt;processor&gt; /usr/local/bin/kubehcl
+sudo mv kubehcl_&lt;version&gt;_linux_&lt;processor&gt;/kubehcl /usr/local/bin/kubehcl
 
 # 5. Verify installation
 kubehcl --version
