added navigation bar

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
       <li><a href="installation.html">Installation</a></li>
       <li><a href="usage.html">Usage</a></li>
       <li><a href="examples.html">Examples</a></li>
+      <li><a href="commands.html">Examples</a></li>
+
     </ul>
   </nav>
 
