--- a/about.html
+++ b/about.html
@@ -14,7 +14,14 @@
       <img src="assets/kubehcl-logo.png" alt="KubeHCL Logo" class="sidebar-logo" />
       <h2>KubeHCL</h2>
     </div>
-    <script src="./js/nav.js"></script>
+    <ul class="nav-links">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html" class="active">About</a></li>
+      <li><a href="quickstart.html">Quickstart</a></li>
+      <li><a href="installation.html">Installation</a></li>
+      <li><a href="usage.html">Usage</a></li>
+      <li><a href="examples.html">Examples</a></li>
+    </ul>
   </nav>
 
   <main class="content">
