--- a/index.html
+++ b/index.html
@@ -11,21 +11,8 @@
   <div class="glow"></div>
 
   <!-- SIDEBAR -->
-  <nav class="sidebar">
-    <div class="sidebar-header">
-      <img src="assets/kubehcl-logo.png" alt="KubeHCL Logo" class="sidebar-logo" />
-      <h2>KubeHCL</h2>
-    </div>
-    <ul class="nav-links">
-      <li><a href="index.html" class="active">Home</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="quickstart.html">Quickstart</a></li>
-      <li><a href="installation.html">Installation</a></li>
-      <li><a href="usage.html">Usage</a></li>
-      <li><a href="examples.html">Examples</a></li>
-      <li><a href="commands.html">Examples</a></li>
-
-    </ul>
+  <nav class="sidebar" id="sidebar">
+    <script src="./js/nav.js"> </script>
   </nav>
 
   <!-- MAIN CONTENT -->
