--- a/quickstart.html
+++ b/quickstart.html
@@ -9,19 +9,8 @@
 <body>
   <div class="glow"></div>
 
-  <nav class="sidebar">
-    <div class="sidebar-header">
-      <img src="assets/kubehcl-logo.png" alt="KubeHCL Logo" class="sidebar-logo" />
-      <h2>KubeHCL</h2>
-    </div>
-    <ul class="nav-links">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="quickstart.html" class="active">Quickstart</a></li>
-      <li><a href="installation.html">Installation</a></li>
-      <li><a href="usage.html">Usage</a></li>
-      <li><a href="examples.html">Examples</a></li>
-    </ul>
+  <nav class="sidebar" id="sidebar">
+    <script src="./js/nav.js"> </script>
   </nav>
 
   <main class="content">
