--- a/examples.html
+++ b/examples.html
@@ -16,8 +16,7 @@
   <main class="content">
     <section class="section">
       <h2>Examples</h2>
-      <p>Examples will be added later</p>
-      <!-- <a href="#" class="btn">View Docs</a> -->
+      <a href="https://github.com/yanir75/kubehcl/tree/main/example" class="btn">View examples</a>
     </section>
 
     <footer>
