--- a/usage.html
+++ b/usage.html
@@ -17,7 +17,7 @@
   <main class="content">
     <section class="section">
       <h2>Usage</h2>
-      <p>Define your Kubernetes resources in HCL and let KubeHCL generate YAML automatically:</p>
+      <p>Define your Kubernetes resources in HCL and let KubeHCL deploy it:</p>
       <pre><code>
 kube_resource "foo" {
   apiVersion = "v1"
