added alpine support

--- a/argocd.html
+++ b/argocd.html
@@ -53,9 +53,11 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: argocd-repo-server
+  # namespace: argocd
 spec:
   template:
     spec:
+      # Volumes shared among containers
       volumes:
         - name: kubehcl
           configMap:
@@ -69,21 +71,24 @@ spec:
         - name: plugins
           emptyDir: {}
 
+      # Init container to download kubehcl binary
       initContainers:
         - name: download-tools
-          image: alpine:3.8
+          image: alpine:3.22
           command: [sh, -c]
           args:
-            - wget -qO- https://github.com/yanir75/kubehcl/releases/download/v0.3.4/kubehcl_0.3.4_linux_&lt;processor&gt;.tar.gz |
+            - wget -qO- https://github.com/yanir75/kubehcl/releases/download/v0.3.4/kubehcl_0.3.4_&lt;processor&gt;.apk |
               tar -xvzf - &&
-              mv kubehcl /custom-tools/
+              mv usr/bin/kubehcl /custom-tools/
           volumeMounts:
             - mountPath: /custom-tools
               name: custom-tools
 
+      # Main containers
       containers:
+          
         - name: kubehcl
-          image: ubuntu:bionic
+          image: alpine:3.22
           command: [/var/run/argocd/argocd-cmp-server]
           securityContext:
             runAsNonRoot: true
@@ -108,6 +113,8 @@ spec:
             limits:
               memory: "128Mi"
               cpu: "500m"
+
+
       </code></pre>
 
       <p>
